--- a/aula003.html
+++ b/aula003.html
@@ -11,7 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Cascadia+Code:ital,wght@0,200..700;1,200..700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/aulas.css">
-    <link rel="shortcut icon" href="imagens/logopython.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/logopython.png" type="image/x-icon">
 </head>
 
 <body>
@@ -162,8 +162,7 @@ linhas')</code></pre>
                 <button id="left-button" class="nav-button" onclick="location.href='aula002.html'">Aula
                     anterior</button>
                 <button id="center-button" class="nav-button" onclick="location.href='bot.html'">Área de Testes</button>
-                <button id="right-button" class="nav-button" onclick="location.href='aula004.html'">Próxima
-                    Aula</button>
+                <button id="right-button" class="nav-button" onclick="location.href='aula004.html'">Próxima Aula</button>
             </div>
         </main>
     </div>
