--- a/aula001.html
+++ b/aula001.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Cascadia+Code:ital,wght@0,200..700;1,200..700&display=swap"
         rel="stylesheet">
-    <link rel="shortcut icon" href="imagens/logopython.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/logopython.png" type="image/x-icon">
     <link rel="stylesheet" href="css/aulas.css">
     <style>
         :root {
