--- a/aula002.html
+++ b/aula002.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conceitos Iniciais</title>
+    <title>Termos Iniciais</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Cascadia+Code:ital,wght@0,200..700;1,200..700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/aulas.css">
-    <link rel="shortcut icon" href="imagens/logopython.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/logopython.png" type="image/x-icon">
 </head>
 
 <body>
