--- a/aula004.html
+++ b/aula004.html
@@ -43,6 +43,8 @@
                 </div>
             </div>
 
+            <p>As variáveis são divididas em duas partes, uma antes do sinal de atribuição e outro depois do sinal de atribuição. A parte que está antes do sinal é chamada de nome da variavel. Já o que está depois do sinal de atribuição chamado de valor da variável.</p>
+
             <p>Mas espera... O que são strings?? O que é tipo inteiro?</p>
             <p>Para entender melhor isso, antes de entender as variáveis, precisamos entender o que são tipos de dados,
                 pois sem isso você dificilmente compreenderá o que são as próprias variáveis. Vamos avançar em direção
