--- a/aula004.html
+++ b/aula004.html
@@ -63,12 +63,14 @@
                     </div>
                     <span>sintaxe.py</span>
                 </div>
-                <pre class="example-pre"><code>nome_da_variavel = 'tipo de dado'</code></pre>
+                <pre class="example-pre"><code>variavel = valor</code></pre>
                 <div class="example-output-container">
                     <div class="example-output-header">Saída:</div>
                     <div class="output">Nenhuma</div>
                 </div>
             </div>
+
+            <p>Onde variavel é o nome da variável e o valor é o valor, que é subdividido em tipos de dados</p>
 
             <p>Vamos conhecer os tipos de dados para compreender melhor.</p>
             <h2>Conhecendo os tipos de dados</h2>
