--- a/aula003.html
+++ b/aula003.html
@@ -162,7 +162,8 @@ linhas')</code></pre>
                 <button id="left-button" class="nav-button" onclick="location.href='aula002.html'">Aula
                     anterior</button>
                 <button id="center-button" class="nav-button" onclick="location.href='bot.html'">Área de Testes</button>
-                <button id="right-button" class="nav-button" onclick="location.href='aula004.html'">Próxima Aula</button>
+                <button id="right-button" class="nav-button" onclick="location.href='aula004.html'">Próxima
+                    Aula</button>
             </div>
         </main>
     </div>
