--- a/aula008.html
+++ b/aula008.html
@@ -18,7 +18,7 @@
     <header class="class-header">
         <h1 style="margin: 0;"><a href="index.html" style="text-decoration: none; color: currentColor;">Curso de
                 Python</a></h1>
-        <span style="font-size: 1.2em; font-weight: bold;">Aula 8 - Operadores de Comparação</span>
+        <span style="font-size: 1.2em; font-weight: bold;">Aula 8 - Operadores de comparação e lógicos</span>
     </header>
     <div class="container">
         <main>
