--- a/bot.html
+++ b/bot.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/addon/hint/show-hint.min.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/addon/display/fullscreen.min.css">
-    <link rel="shortcut icon" href="imagens/logopython.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/logopython.png" type="image/x-icon">
     <style>
         :root {
             --bg-body: #282a36;
