forget menu detail

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         <aside>
             <h1>Tabela de Conteúdo</h1>
             <ul class="table">
-                <li><a href="aula001.html">Introdução ao Python</a></li>
+                <li><a href="aula001.html">Instalação</a></li>
                 <li><a href="aula002.html">Termos Iniciais</a></li>
                 <li><a href="aula003.html">Conceitos Iniciais</a></li>
                 <li><a href="aula004.html">Variáveis e Tipos de dados</a></li>
